<resources>
    <string name="app_name">RealmDbConnection</string>
    <string name="input1">input_first_name</string>
    <string name="input2">input_second_name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintFirstName">First Name</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="sync">Sync</string>
</resources>
