<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintLastName"
        android:padding="@dimen/defaultPadding"
        app:layout_constraintBottom_toTopOf="@id/person_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/person_recycler_view"
        app:layout_constraintLeft_toRightOf="@id/btnAdd"
        app:layout_constraintRight_toLeftOf="@id/btnRemove"
        android:text="@string/sync"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="256dp"
        android:padding="@dimen/defaultPadding"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@id/person_recycler_view"

        app:layout_constraintEnd_toEndOf="@id/btnRemove"
        app:layout_constraintLeft_toLeftOf="@id/btnRemove"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        app:layout_constraintBottom_toTopOf="@id/person_recycler_view"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintLeft_toRightOf="@id/btnAdd"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintFirstName"
        android:padding="@dimen/defaultPadding"
        app:layout_constraintBottom_toTopOf="@id/input_firstName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/person_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultPadding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_firstName"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
